add js and transitions for hamburger menu

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,10 +1,16 @@
 .header {
   nav {
-    padding: 24px;
+    padding: 1.0625rem 1.5rem;
+  }
+
+  h1 {
+    color: $lemonYellow;
   }
 
   &__logo {
     img {
+      height: 50px;
+      width: 50px;
     }
   }
 
@@ -14,20 +20,60 @@
       display: block;
       width: 26px;
       height: 2px;
-      background-color: $white;
+      background-color: $darkerBlue;
+      transition: all 300ms ease-in-out;
+      transform-origin: 3px 1px;
 
       &:not(:last-child) {
-        margin-bottom: 3px;
+        margin-bottom: 5px;
+      }
+    }
+
+    &.open {
+      > span:first-child {
+        transform: rotate(45deg);
+      }
+
+      > span:nth-child(2) {
+        opacity: 0;
+      }
+
+      > span:last-child {
+        transform: rotate(-45deg);
       }
     }
   }
 
   &__links {
     a {
-      font-size: $font-sm;
+      position: relative;
+      font-size: $font-lg;
+      color: $white;
+      transition: color 300ms ease-in-out;
 
       &:not(:last-child) {
-          margin-right: 32px;
+        margin-right: 32px;
+      }
+
+      &::before {
+        content: '';
+        display: block;
+        position: absolute;
+        height: 5px;
+        left: 0;
+        right: 0;
+        bottom: -30px;
+        background: linear-gradient(to right, $darkerBlue, $lightBlue);
+        opacity: 0;
+        transition: opacity 300ms ease-in-out;
+      }
+
+      &:hover {
+        color: $lemonYellow;
+
+        &::before {
+          opacity: 1;
+        }
       }
     }
   }
@@ -35,5 +81,10 @@
   &__cta {
     font-size: $font-sm;
     color: $white;
+    transition: opacity 300ms ease-in-out;
+
+    &:hover {
+      opacity: 0.75;
+    }
   }
 }
