--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -12,7 +12,7 @@ body {
     padding: 0;
     font-family: "Public Sans", sans-serif;
     font-size: $font-med;
-    font-weight: 300;
+    font-weight: 400;
     color: $white;
     line-height: 1.3;
     background-image: url("/images/dogs_background.jpg");
@@ -47,11 +47,11 @@ button, .button {
     border-radius: 50px;
     cursor: pointer;
     color: $white;
-    font-weight: 400;
+    font-weight: 700;
     border: 0;
 }
 
-.main {
+.main, .footer {
     padding: 24px;
 }
 
