--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -14,7 +14,7 @@ body {
   padding: 0;
   font-family: "Public Sans", sans-serif;
   font-size: 1.125rem;
-  font-weight: 300;
+  font-weight: 400;
   color: #FFF;
   line-height: 1.3;
   background-image: url("/images/dogs_background.jpg");
@@ -56,11 +56,11 @@ button, .button {
   border-radius: 50px;
   cursor: pointer;
   color: #FFF;
-  font-weight: 400;
+  font-weight: 700;
   border: 0;
 }
 
-.main {
+.main, .footer {
   padding: 24px;
 }
 
@@ -77,30 +77,94 @@ button, .button {
 }
 
 .header nav {
-  padding: 24px;
+  padding: 1.0625rem 1.5rem;
+}
+
+.header h1 {
+  color: #FCEB58;
+}
+
+.header__logo img {
+  height: 50px;
+  width: 50px;
 }
 
 .header__menu > span {
   display: block;
   width: 26px;
   height: 2px;
-  background-color: #FFF;
+  background-color: #148EA3;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+  -webkit-transform-origin: 3px 1px;
+          transform-origin: 3px 1px;
 }
 
 .header__menu > span:not(:last-child) {
-  margin-bottom: 3px;
+  margin-bottom: 5px;
+}
+
+.header__menu.open > span:first-child {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.header__menu.open > span:nth-child(2) {
+  opacity: 0;
+}
+
+.header__menu.open > span:last-child {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
 
 .header__links a {
-  font-size: 0.875rem;
+  position: relative;
+  font-size: 1.375rem;
+  color: #FFF;
+  -webkit-transition: color 300ms ease-in-out;
+  transition: color 300ms ease-in-out;
 }
 
 .header__links a:not(:last-child) {
   margin-right: 32px;
 }
 
+.header__links a::before {
+  content: '';
+  display: block;
+  position: absolute;
+  height: 5px;
+  left: 0;
+  right: 0;
+  bottom: -30px;
+  background: -webkit-gradient(linear, left top, right top, from(#148EA3), to(#11CEF0));
+  background: linear-gradient(to right, #148EA3, #11CEF0);
+  opacity: 0;
+  -webkit-transition: opacity 300ms ease-in-out;
+  transition: opacity 300ms ease-in-out;
+}
+
+.header__links a:hover {
+  color: #FCEB58;
+}
+
+.header__links a:hover::before {
+  opacity: 1;
+}
+
 .header__cta {
   font-size: 0.875rem;
+  color: #FFF;
+  -webkit-transition: opacity 300ms ease-in-out;
+  transition: opacity 300ms ease-in-out;
+}
+
+.header__cta:hover {
+  opacity: 0.75;
+}
+
+p {
   color: #FFF;
 }
 /*# sourceMappingURL=style.css.map */
