hamburger menu update

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,4 +1,35 @@
 .header {
+
+  // hamburger open styles
+  &.open {
+
+    &__toggle {
+      > span:first-child {
+         transform: rotate(45deg);
+      }
+    
+      > span:nth-child(2) {
+        opacity: 0;
+        }
+    
+        > span:last-child {
+          transform: rotate(-45deg);
+        }
+      }
+    }
+      
+    
+
+  .overlay {
+    position: fixed;
+    top: 5.625rem;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    background-color: $lightBlue;
+    background-image: linear-gradient($lightBlue, transparent);
+  }
+
   nav {
     padding: 1.0625rem 1.5rem;
   }
@@ -15,7 +46,7 @@
   }
 
   &__menu {
-    // Mobile Menu
+    // Mobile Menu toggle
     > span {
       display: block;
       width: 26px;
@@ -29,19 +60,6 @@
       }
     }
 
-    &.open {
-      > span:first-child {
-        transform: rotate(45deg);
-      }
-
-      > span:nth-child(2) {
-        opacity: 0;
-      }
-
-      > span:last-child {
-        transform: rotate(-45deg);
-      }
-    }
   }
 
   &__links {
@@ -89,12 +107,6 @@
   }
 }
 
-.overlay {
-  position: fixed;
-  top: 90px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  background-color: $lightBlue;
-  background-image: linear-gradient($lightBlue, transparent);
-}
+
+
+
